--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,35 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">James</p>
+          <p>Teacher</p>
+          <p class="card-text">James, a dedicated teacher, found purpose in guiding his students through the complexities of learning, fostering not just knowledge but curiosity and empathy. Despite facing numerous challenges in the classroom, he persisted, knowing that each moment of connection and growth was a testament to the power of education.</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Anna</p>
+          <p>Artist</p>
+          <p class="card-text">
+            Anna, a resilient artist, battled self-doubt while striving to find her voice in the bustling city. Through late nights and countless sketches, she discovered that her true masterpiece wasn't just her art but the courage to share it with the world. With each stroke of her brush, Anna painted her journey of self-discovery, embracing imperfections as part of her unique masterpiece.</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Sophie</p>
+          <p>Nurse</p>
+          <p class="card-text">Sophie, a compassionate nurse, comforted patients with gentle words and unwavering kindness, offering solace in moments of fear and pain. Her unwavering dedication to healing extended beyond medicine, as she embraced each person with empathy and understanding, leaving a lasting impact on all whose lives she touched</p>
         </div>
       </div>
     </div>
